cm4all-beng-proxy (0.4.4) unstable; urgency=low

  * forward Accept-Language request header to the translation server
  * translate: added the USER_AGENT request packet

 --

cm4all-beng-proxy (0.4.3) unstable; urgency=low

  * processor: rewrite URI in LINK tags
  * processor: rewrite URI in PARAM tags
  * use splice() from glibc 2.7
  * translate: added VARY response packet
  * build documentation with texlive

 -- Max Kellermann <mk@cm4all.com>  Wed, 04 Mar 2009 09:53:56 +0100

cm4all-beng-proxy (0.4.2) unstable; urgency=low

  * hashmap: fix corruption in slot chain
  * use monotonic clock to calculate expiry times
  * processor: rewrite URIs in the EMBED, VIDEO, AUDIO tags

 -- Max Kellermann <mk@cm4all.com>  Tue, 17 Feb 2009 17:14:48 +0100

cm4all-beng-proxy (0.4.1) unstable; urgency=low

  * translate: clear client->transformation
  * handler: check for translation errors
  * http-server: fixed assertion failure during shutdown
  * http-server: send "Keep-Alive" response header
  * worker: after fork(), call event_reinit() in the parent process
  * added valgrind build dependency
  * build with Debian's libevent-1.4 package

 -- Max Kellermann <mk@cm4all.com>  Tue, 10 Feb 2009 11:48:53 +0100

cm4all-beng-proxy (0.4) unstable; urgency=low

  * added support for transformation views
    - in the JavaScript API, mode=proxy is now deprecated
  * http-cache: fix segfault when request_headers==NULL
  * http-cache: store multiple (varying) versions of a resource
  * http-cache: use the "max-age" cache-control response

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Jan 2009 13:29:43 +0100

cm4all-beng-proxy (0.3.9) unstable; urgency=low

  * http-client: assume keep-alive is enabled on HTTP 1.1
  * processor: use configured/session path-info for mode=child URIs

 -- Max Kellermann <mk@cm4all.com>  Tue, 27 Jan 2009 13:07:51 +0100

cm4all-beng-proxy (0.3.8) unstable; urgency=low

  * processor: pass Content-Type and Content-Language headers from
    template